[package]
name = "simple-towers"
version = "0.1.0"
authors = ["Nikola Stoyanov <ns.barzakov@gmail.com>"]
edition = "2018"

[profile.dev]
opt-level = 2

[dependencies]
amethyst = { version = "0.13.0", features = ["nightly", "vulkan"] }
derive_deref = "1.1.0"
rand = "0.7.2"
serde = "1.0.104"
serde_derive = "1.0.104"

# TODO: move to dev-dependencies when docs for them can be built
amethyst_test = { version = "0.4.0", features = ["nightly"] }

[dev-dependencies]
