[package]
name = "simple-towers"
version = "0.1.0"
authors = ["Nikola Stoyanov <ns.barzakov@gmail.com>"]
edition = "2018"

[profile.dev]
opt-level = 2

[dependencies]
amethyst_core = "0.8.1"
amethyst_input = "0.9.1"
derive_deref = "1.1.0"
rand = "0.7.2"
rltk = "0.6.0"
serde = "1.0.104"
serde_derive = "1.0.104"
specs = "0.15.1"

[dev-dependencies]
